// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordInput should hides password quality by default 1`] = `
<div
  className={undefined}
>
  <label
    htmlFor="test"
    style={
      Object {
        "display": "block",
      }
    }
  >
    Password
     
    <span
      style={
        Object {
          "color": "red",
        }
      }
    >
       *
    </span>
  </label>
  <input
    className={undefined}
    id="test"
    maxLength={50}
    name="test"
    onChange={[Function]}
    placeholder={undefined}
    type="password"
    value="Uisi38#8iad"
  />
</div>
`;

exports[`PasswordInput should hides password quality when enabled no password is entered 1`] = `
<div
  className={undefined}
>
  <label
    htmlFor="test"
    style={
      Object {
        "display": "block",
      }
    }
  >
    Password
     
    <span
      style={
        Object {
          "color": "red",
        }
      }
    >
       *
    </span>
  </label>
  <input
    className={undefined}
    id="test"
    maxLength={50}
    name="test"
    onChange={[Function]}
    placeholder={undefined}
    showQuality={true}
    type="password"
    value=""
  />
</div>
`;

exports[`PasswordInput should shows password quality when enabled and a password is entered 1`] = `
<div
  className={undefined}
>
  <label
    htmlFor="test"
    style={
      Object {
        "display": "block",
      }
    }
  >
    Password
     
    <span
      style={
        Object {
          "color": "red",
        }
      }
    >
       *
    </span>
  </label>
  <input
    className={undefined}
    id="test"
    maxLength={50}
    name="test"
    onChange={[Function]}
    placeholder={undefined}
    showQuality={true}
    type="password"
    value="Uisi38#8iad"
  />
</div>
`;
